fixed range input on firefox and IE

--- a/src/template/profitelo_theme/stylesheets/common/components/interface/image-crop/image-crop.sass
+++ b/src/template/profitelo_theme/stylesheets/common/components/interface/image-crop/image-crop.sass
@@ -33,6 +33,7 @@
     margin: 0 auto
 
     .cr-slider
+      padding: 0
       width: 316px
 
   .icon
